<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/speedometer"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description_img_km"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumo_total_quilometros"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/activityResumoTotalKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumo_ph_km"
        android:layout_gravity="center_horizontal"/>



    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/gas"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description_img_l"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumo_total_litros"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/activityResumoTotalCombustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumo_ph_l"
        android:layout_gravity="center_horizontal"/>


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/coin1"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description_img_d"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumo_total_dinheiro"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/activityResumoTotalGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumo_ph_d"
        android:layout_gravity="center_horizontal"/>





</LinearLayout>