<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">



    <Spinner
        android:id="@+id/abastecimentoSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_posto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/abastecimentoNomePosto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quilometragem">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/abastecimentoQuilometragem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_litro">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/abastecimentoValorLitro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantidade_litros">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/abastecimentoQuantLitros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/abastecimentoTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:enabled="false"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/abastecimentoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date|datetime"
            android:maxLength="10" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/abastecimentoBtnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar_txt"/>

</LinearLayout>
